# ksei

./: CLAUDE.md  pyproject.toml
examples/: client_test.py  fetch_and_dump_portfolios.py
src/ksei/: client.py  utils.py
test/: client_test.py
