[project]
name = "ksei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fake-useragent>=2.2.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
]

[project.scripts]
ksei = "ksei:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
