[project]
name = "ksei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fake-useragent>=2.2.0",
    "pyjwt>=2.10.1",
    "httpx>=0.27.0",
]

[project.scripts]
ksei = "ksei:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
